A fix for the ammazon book field wrapping

--- a/sp123_rubik_style.scss
+++ b/sp123_rubik_style.scss
@@ -233,6 +233,10 @@ div.panel-pane div.node.node-advertisement {
   }
 }
 
+.pane-node-field-amazon-book-listing {
+  display: table;
+}
+
 .pane-node-field-call-to-action {
   display: table;
   margin: 1em auto;
